# opentelemetry-python-contrib

benchmarks/: data.js
instrumentation/opentelemetry-instrumentation-django/src/opentelemetry/instrumentation/django/: __init__.py  middleware.py
instrumentation/opentelemetry-instrumentation-sqlcommenter/: README.md  setup.cfg  setup.py
instrumentation/opentelemetry-instrumentation-sqlcommenter/src/opentelemetry/instrumentation/sqlcommenter/: __init__.py  package.py  version.py
instrumentation/opentelemetry-instrumentation-sqlcommenter/src/opentelemetry/instrumentation/sqlcommenter/django/: __init__.py  middleware.py
instrumentation/opentelemetry-instrumentation-sqlcommenter/src/opentelemetry/instrumentation/sqlcommenter/psycopg2/: extension.py
instrumentation/opentelemetry-instrumentation-sqlcommenter/src/opentelemetry/instrumentation/sqlcommenter/sqlalchemy/: executor.py
instrumentation/opentelemetry-instrumentation-sqlcommenter/tests/: tests.py
instrumentation/opentelemetry-instrumentation-sqlcommenter/tests/django/: tests.py
instrumentation/opentelemetry-instrumentation-sqlcommenter/tests/flask/: app.py  tests.py
instrumentation/opentelemetry-instrumentation-sqlcommenter/tests/generic/: test_generate_sql_comment.py  test_opencensus.py  test_opentelemetry.py
instrumentation/opentelemetry-instrumentation-sqlcommenter/tests/psycopg2/: tests.py
instrumentation/opentelemetry-instrumentation-sqlcommenter/tests/sqlalchemy/: tests.py
