[flake8]
exclude = build.git.tox
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = sqlcommenter
line_length = 79
multi_line_output = 5

[metadata]
name=test-opentelemetry_sqlcommenter
description = OpenTelemetry SQLCommenter instrumentation
long_description = file: README.md
long_description_content_type=text/markdown
author=OpenTelemetry Authors
author_email=cncf-opentelemetry-contributors@lists.cncf.io
platforms = any
license = Apache-2.0
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities
    Framework :: Django
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2

[options]
python_requires = >=3.6
package_dir=
    =src
packages=find_namespace:
install_requires =
    opentelemetry-api ~= 1.3
    opentelemetry-semantic-conventions == 0.27b0
    opentelemetry-instrumentation == 0.27b0

[options.extras_require]
test =
    opentelemetry-sdk ~= 1.3
    pytest
    django>=1.11
    psycopg2
    sqlalchemy

[options.packages.find]
where = src

[options.entry_points]
opentelemetry_instrumentor =
    sqlcommenter = opentelemetry.instrumentation.sqlcommenter:SQLCommenterInstrumentor


